--- a/docker.env
+++ b/docker.env
@@ -1,5 +1,4 @@
 LOG_LEVEL=debug
-PORT=7503
+PORT=7523
 DATABASE_DRIVER=postgres
-DATABASE_URL=postgres://ant:ant-secret@127.0.0.1:5432/ant-service
-UPLOAD_DIRECTORY=/tmp
+DATABASE_URL=postgres://profile:profile3@127.0.0.1:5432/service-profile
