--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -22,16 +22,16 @@ jobs:
           go get -u golang.org/x/lint/golint
 
       - name: Build the docker-compose stack
-        run: docker-compose -f "tests_runner/docker-compose.yml" up -d --build
+        run: docker-compose -f "tests_runner/docker-compose.yml" build
+
+      - name: Run the docker-compose stack
+        run: docker-compose -f "tests_runner/docker-compose.yml" up -d
 
       - name: Wait for postgresql to come up
         run: count=0; while ! nc -z localhost 5424 && [[ count -lt 30 ]]; do (( count += 1 )); sleep 1; echo "waiting for postgresql $count"; done;
 
       - name: Allow 10 seconds for migrations to complete if any
         run: sleep 10s
-
-      - name: Print out logs to help with debugging
-        run: docker-compose -f ./tests_runner/docker-compose.yml logs
 
       - name: Test profile service
         run: go test  ./...
