--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Setup go testing infrastructure
         uses: actions/setup-go@v2
         with:
-          go-version: '1.15'
+          go-version: '1.16'
 
       - name: Install dependencies
         run: |
@@ -35,6 +35,9 @@ jobs:
 
       - name: Display the docker-compose stack logs
         run: docker-compose -f "tests_runner/docker-compose.yml" logs
+
+      - name: Workaround for go1.16 https://github.com/golang/go/issues/44129#issuecomment-854975677
+        run: go env -w GOFLAGS=-mod=mod
 
       - name: Test profile service
         run: go test  ./...
