--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,19 +1,40 @@
 name: Release a new docker image from build
 
 on:
-  push:
-    branches: [ main ]
+  create:
     tags:
-      - v*
+      - "v*.*.*"
+  push:
+    tags:
+      - "v*.*.*"
+
 jobs:
 
   build:
-
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code for performing a release
         uses: actions/checkout@v2
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          # list of Docker images to use as base name for tags
+          images: |
+            ghcr.io/${{ github.repository }}
+          flavor: |
+            latest=true
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{raw}}
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+            type=raw,value={{tag}}
+            type=sha
+            type=sha,format=long
 
       # Setting up Docker Builder
       - name: Set up Docker Builder
@@ -35,7 +56,12 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./
-          version: latest
           file: ./Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository }}:latest
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            BUILDTIME=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.created'] }}
+            VERSION=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
+            REVISION=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.revision'] }}
+
