--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   profile_db:
-    image: postgres:14
+    image: postgres:14.5
     restart: unless-stopped
     environment:
       - POSTGRES_USER=profile
@@ -13,7 +13,7 @@ services:
 
 
   profile_migration:
-    build: ../
+    build: ./
     depends_on:
       - profile_db
     environment:
