--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -16,31 +16,5 @@ jobs:
         with:
           go-version: '1.19'
 
-      - name: Build the docker-compose stack
-        run: docker-compose -f "docker-compose.yml" build
-
-      - name: Run the docker-compose stack
-        run: docker-compose -f "docker-compose.yml" up -d
-
-      - name: Wait for postgresql to come up
-        run: count=0; while ! nc -z localhost 5424 && [[ count -lt 30 ]]; do (( count += 1 )); sleep 1; echo "waiting for postgresql $count"; done;
-
-      - name: Allow 10 seconds for migrations to complete if any
-        run: sleep 10s
-
-      - name: Display the docker-compose stack logs
-        run: docker-compose -f "docker-compose.yml" logs
-
-      - name: Workaround for go1.16 https://github.com/golang/go/issues/44129#issuecomment-854975677
-        run: go env -w GOFLAGS=-mod=mod
-
-      - name: Test profile service
-        run: go test  ./...
-
-      - name: Run Vet & Lint
-        run: |
-          go vet .
-          golint -set_exit_status=1 .
-
-      - name: Stop containers
-        run: docker-compose -f "docker-compose.yml" down
+      - name: Run all required system tests
+        run: make build
