improvements to streamline precommit function

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,12 +1,13 @@
 repos:
-- repo: https://github.com/dnephin/pre-commit-golang
-  rev: v0.5.0
+- repo: https://github.com/tekwizely/pre-commit-golang
+  rev: v1.0.0-rc.1
   hooks:
     - id: go-fmt
     - id: go-vet
     - id: golangci-lint
-    - id: go-build
+    - id: go-build-mod
     - id: go-mod-tidy
+
 - repo: local
   hooks:
     - id: local-build
