aesthetic cleanup to streamline CI/CD workflows

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-  profile_db:
+  profile_database:
     image: postgres:15.2
     environment:
       - POSTGRES_USER=ant
@@ -13,11 +13,11 @@ services:
   profile_migration:
     build: ./
     depends_on:
-      - profile_db
+      - profile_database
     environment:
       - LOG_LEVEL=debug
       - DO_MIGRATION=true
-      - DATABASE_URL=postgres://ant:secret@profile_db:5432/service_profile?sslmode=disable
+      - DATABASE_URL=postgres://ant:secret@profile_database:5432/service_profile?sslmode=disable
       - CONTACT_ENCRYPTION_KEY=ualgJEcb4GNXLn3jYV9TUGtgYrdTMg
       - CONTACT_ENCRYPTION_SALT=VufLmnycUCgz
     restart: on-failure
