--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ vendor
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+coverage.out
+coverage.html
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
