--- a/golangci.yaml
+++ b/golangci.yaml
@@ -1,10 +1,14 @@
 linters-settings:
   govet:
     check-shadowing: true
+  errcheck:
+    exclude-functions:
+      - fmt.Errorf
+run:
+  timeout: 3m
 linters:
   disable:
     - gocritic
-    - typecheck
   enable:
     - bidichk
     - deadcode
@@ -32,6 +36,7 @@ linters:
     - structcheck
     - tenv
     - testpackage
+    - typecheck
     - unconvert
     - unparam
     - unused
@@ -40,3 +45,4 @@ linters:
     - whitespace
 issues:
   fix: true
+
