--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 
 services:
   profile_database:
-    image: pgvector/pgvector:pg17
+    image: paradedb/paradedb:v0.14.1
     environment:
       - POSTGRES_USER=ant
       - POSTGRES_PASSWORD=secret
