--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release a new docker image from build
+name: Release docker images for all apps
 
 on:
   create:
@@ -13,18 +13,61 @@ permissions:
   packages: write
 
 jobs:
-  build-and-push-image:
+  build-matrix:
     runs-on: ubuntu-latest
+    outputs:
+      apps: ${{ steps.set-matrix.outputs.apps }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - id: set-matrix
+        name: Find all apps with Dockerfiles
+        run: |
+          APPS=$(find ./apps -name "Dockerfile" -exec dirname {} \; | sed 's|^\./||' | jq -R -s -c 'split("\n")[:-1]')
+          echo "apps=$APPS" >> $GITHUB_OUTPUT
+          echo "Found apps: $APPS"
+
+  build-and-push-images:
+    needs: build-matrix
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        app: ${{ fromJson(needs.build-matrix.outputs.apps) }}
     steps:
       - name: Checkout code for performing a release
         uses: actions/checkout@v4
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3.3.0
+        uses: docker/login-action@v3.4.0
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      # Get app name from directory path and set image name based on app type
+      - name: Extract app name and set image name
+        id: app-name
+        run: |
+          APP_NAME=$(basename ${{ matrix.app }})
+          APP_PATH=${{ matrix.app }}
+          
+          # Check if this is the default app or an integration
+          if [[ "${{ matrix.app }}" == "apps/default" ]]; then
+            # Default app uses service-notification
+            IMAGE_NAME="service-notification"
+          elif [[ "${{ matrix.app }}" == apps/integrations/* ]]; then
+            # Integration apps use integration-notification-<app name>
+            IMAGE_NAME="integration-notification-${APP_NAME}"
+          else
+            # Fallback for any other apps
+            IMAGE_NAME="service-notification-${APP_NAME}"
+          fi
+          
+          echo "APP_NAME=$APP_NAME" >> $GITHUB_ENV
+          echo "APP_PATH=$APP_PATH" >> $GITHUB_ENV
+          echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
+          echo "App name: $APP_NAME, Path: $APP_PATH, Image name: $IMAGE_NAME"
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
@@ -32,7 +75,7 @@ jobs:
         with:
           # list of Docker images to use as base name for tags
           images: |
-            ghcr.io/${{ github.repository }}
+            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}
           flavor: |
             latest=true
           tags: |
@@ -47,11 +90,11 @@ jobs:
             type=sha,format=long
 
       # Push to Github Container Registry
-      - name: Build and Pushing Image to Github Container Registry
+      - name: Build and Push Image to Github Container Registry
         uses: docker/build-push-action@v6
         with:
           context: ./
-          file: ./Dockerfile
+          file: ./${{ env.APP_PATH }}/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -59,4 +102,3 @@ jobs:
             BUILDTIME=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.created'] }}
             VERSION=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
             REVISION=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.revision'] }}
-
