--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -35,7 +35,7 @@ formatters:
       # with the given prefixes are grouped after 3rd-party packages.
       # Default: []
       local-prefixes:
-        - github.com/pitabwire/frame
+        - github.com/antinvestor/service-profile
 
     golines:
       # Target maximum line length.
