--- a/apps/settings/Dockerfile
+++ b/apps/settings/Dockerfile
@@ -18,8 +18,8 @@ RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo \
 FROM gcr.io/distroless/static:nonroot
 
 # Copy from builder stage
-COPY --from=builder /app/binary /binary
-COPY --from=builder /app/apps/default/migrations /migrations
+COPY --from=builder /app/binary /settings
+COPY --from=builder /app/apps/settings/migrations /migrations
 
 # Run as non-root user
 USER 65532:65532
@@ -32,4 +32,4 @@ EXPOSE 50051
 WORKDIR /
 
 # Run the binary
-ENTRYPOINT ["/binary"]
+ENTRYPOINT ["/settings"]
