--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 
 services:
   profile_database:
-    image: paradedb/paradedb:0.17.2
+    image: postgres:latest
     environment:
       - POSTGRES_USER=ant
       - POSTGRES_PASSWORD=s3cr3t
