change go version the latest stable

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -14,7 +14,11 @@ jobs:
       - name: Setup go testing infrastructure
         uses: actions/setup-go@v5
         with:
-          go-version: '1.24'
+          go-version: "stable"
+      - name: Set up gotestfmt
+        uses: gotesttools/gotestfmt-action@v2
+        with:
+          # Optional: pass GITHUB_TOKEN to avoid rate limiting.
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - run: go test -p 1 -json -v ./... 2>&1 | gotestfmt -hide all
 
-      - name: Run all required system tests
-        run: make build
