--- a/apps/default/Dockerfile
+++ b/apps/default/Dockerfile
@@ -1,7 +1,16 @@
+ARG TARGETOS=linux
+ARG TARGETARCH=amd64
+
+# ---------- Builder ----------
 FROM golang:1.25 AS builder
 
 # Set working directory
 WORKDIR /app
+
+ARG REPOSITORY
+ARG VERSION=dev
+ARG REVISION=none
+ARG BUILDTIME
 
 COPY go.mod go.sum ./
 RUN go mod download
@@ -10,26 +19,39 @@ RUN go mod download
 COPY ./apps/default ./apps/default
 COPY ./internal ./internal
 
-# Build the application with optimizations
-RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo \
-    -ldflags '-extldflags "-static"' -o binary ./apps/default/cmd/main.go
+# Build static binary for target platform
+RUN CGO_ENABLED=0 GOOS=${TARGETOS} GOARCH=${TARGETARCH} \
+    go build -trimpath \
+     -ldflags="-s -w \
+         -X github.com/pitabwire/frame.Version=${VERSION} \
+         -X github.com/pitabwire/frame.Commit=${REVISION} \
+         -X github.com/pitabwire/frame.Date=${BUILDTIME}" \
+     -o /app/binary ./apps/default/cmd/main.go
 
-# Final minimal image
-FROM gcr.io/distroless/static:nonroot
+# ---------- Final ----------
+FROM cgr.dev/chainguard/static:latest
+# Add Maintainer Info
+LABEL maintainer="Bwire Peter <bwire517@gmail.com>"
 
+USER 65532:65532
+
+EXPOSE 80
+
+# Add OCI metadata labels
+ARG REPOSITORY
+ARG VERSION
+ARG REVISION
+ARG BUILDTIME
+LABEL org.opencontainers.image.title="Notification Service"
+LABEL org.opencontainers.image.version=$VERSION
+LABEL org.opencontainers.image.revision=$REVISION
+LABEL org.opencontainers.image.created=$BUILDTIME
+LABEL org.opencontainers.image.source=$REPOSITORY
+
+WORKDIR /
 # Copy from builder stage
 COPY --from=builder /app/binary /default
 COPY --from=builder /app/apps/default/migrations /migrations
-
-# Run as non-root user
-USER 65532:65532
-
-# Document ports
-EXPOSE 80
-EXPOSE 50051
-
-# Set working directory
-WORKDIR /
 
 # Run the binary
 ENTRYPOINT ["/default"]
