--- a/.github/workflows/auto-merge-labeled.yml
+++ b/.github/workflows/auto-merge-labeled.yml
@@ -17,7 +17,7 @@ jobs:
   auto-merge:
     runs-on: ubuntu-latest
     if: |
-      github.event_name == 'pull_request' && 
+      github.event_name == 'pull_request' &&
       contains(github.event.pull_request.labels.*.name, 'auto-merge')
     steps:
       - name: Enable auto-merge
@@ -39,22 +39,22 @@ jobs:
               repo: context.repo.repo,
               state: 'open'
             });
-            
+
             for (const pr of prs) {
               const hasLabel = pr.labels.some(l => l.name === 'auto-merge');
-              if (\!hasLabel) continue;
-              
+              if (!hasLabel) continue;
+
               // Check if all checks passed
               const { data: checks } = await github.rest.checks.listForRef({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 ref: pr.head.sha
               });
-              
+
               const allPassed = checks.check_runs.every(
                 c => c.status === 'completed' && c.conclusion === 'success'
               );
-              
+
               if (allPassed && checks.check_runs.length > 0) {
                 try {
                   await github.rest.pulls.merge({
@@ -69,4 +69,3 @@ jobs:
                 }
               }
             }
-
