Add real Keto ReBAC authorization for all profile apps
- Add OPL namespace definition for profile_tenant
- Add authz middleware for default, devices, settings, and geolocation apps
- Create testketo testcontainer packages for integration tests
- Wire Keto authorizer into base test suites with auth claims and role seeding
- Create geolocation base test suite scaffold
- Remove mock directories

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -434,6 +434,9 @@ linters:
         linters: [ staticcheck ]
       - text: 'nilness: tautological condition'
         linters: [ govet ]
+      - path: 'geolocation_handler\.go'
+        linters:
+          - dupl
       - path: '_test\.go'
         linters:
           - bodyclose
